Fix T75774: rename Musgrave texture output from Fac to Height

To make it clear that's not in the 0..1, but more of a terrain height value
without a strict range.